<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">BBchat</string>

    <string name="title_activity_main">BBchat</string>
    <string name="send">发送</string>
    <string name="sendrecord">录音</string>
    <string name="not_connected">您还未连接到一个可用蓝牙设备</string>
    <string name="bt_not_enabled_leaving">蓝牙不可用</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">连接到: </string>
    <string name="title_not_connected">未连接</string>
    <string name="scanning">正在扫描可用设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">无可匹配设备</string>
    <string name="none_found">未找到可用设备</string>
    <string name="title_paired_devices">已匹配设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">正在扫描设备</string>
    <string name="secure_connect">连接到一个设备</string>
    <string name="insecure_connect">连接到一个设备(不安全)</string>
    <string name="discoverable">打卡蓝牙</string>
    <string name="setting">设置</string>
    <string name="history">聊天记录</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="name">姓名</string>
    <string name="macad">设备号    </string>
    <string name="ico">更换头像</string>
    <string name="background">背景</string>
    <string name="theme">风格</string>
    <string name="save">保存</string>
    <string name="sendFile">传送文件</string>
    <string name="dialogtheme">对话框风格</string>
    <string name="normaltheme">普通风格</string>
    <string-array name="photo_upload_item">
        <item>拍照上传</item>
        <item>本地上传</item>
    </string-array>
    <string name="specialtheme">乒乓风格</string>
    
    

</resources>
